--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,12 @@ html, body, #root {
 }
 
 /* Responsive Typography */
+@media (max-width: 1366px) and (min-width: 1024px) {
+  html {
+    font-size: 15px;
+  }
+}
+
 @media (max-width: 768px) {
   html {
     font-size: 14px;
